# PhotoShare

./: .example.env  .gitignore  LICENSE  Procfile  README.md  main.py  pyproject.toml  requirements.txt  test.db  test_entity_model.py  test_routes_comment.py
PhotoShare-built/: docker-compose.yml  main.py  requirements.txt
PhotoShare-built-3/: pyproject.toml
PhotoShare-built-3/migrations/versions/: 895abc28daeb_add_comments_to_image.py
PhotoShare-built-3/src/conf/: config.py  messages.py
PhotoShare-built-3/src/database/: db.py
PhotoShare-built-3/src/routes/: comments_routes.py  links_routes.py
PhotoShare-built-3/src/schemas/: tag_schemas.py  user_schemas.py
PhotoShare-built-3/tests/: conftests.py  test_e2e_auth.py  test_repository_comments.py  test_repository_image_link.py  test_repository_photo.py  test_repository_tags.py  test_repository_users.py
docs/: conf.py
fix_27_02/: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1e9978b43d66_init.py  6c5c7fb5569d_add_qr_code.py  7ff80c6646b6_add_comment.py  a3119a3bf25a_add_user_and_auth.py  e165fe63c612_init.py
src/: schemas.py  tag_schemas.py
src/conf/: config.py
src/database/: models.py
src/entity/: models.py
src/repository/: comments.py  image_link.py  photo.py  post.py  tags.py  tegs.py  users.py
src/routes/: auth.py  auth_routes.py  comments.py  comments_routes.py  links_routes.py  photo.py  post.py  tags.py  tags_routes.py  user_routes.py
src/schemas/: comment_schemas.py  link_schemas.py  photo_schemas.py
src/services/: auth_service.py  cloudinary_service.py  email_service.py  role_service.py
src/utils/: messages.py  qrcode.py
tests/: conftest.py  test_e2e_auth.py  test_repository_comments.py  test_repository_image_link.py  test_repository_photo.py  test_repository_tags.py  test_repository_users.py
(+30 files in other folders)
