[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Andrii Stoian <astoyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
python-multipart = "^0.0.9"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
cloudinary = "^1.38.0"
pydantic = {extras = ["email"], version = "^2.6.1"}
qrcode = "^7.4.2"
pydantic-settings = "^2.2.1"
libgravatar = "^1.0.4"
fastapi-limiter = "^0.1.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.1"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
